objects/User.object
<CustomObject>
    <fields>
        <fullName>Ag2Ag_ID__c</fullName>
        <externalId>true</externalId>
        <label>BusinessLink ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ag_Tech_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ag Tech Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BYOID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Login name is email address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Fed_Id__c</fullName>
        <externalId>true</externalId>
        <label>Portal Login</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FGI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FGI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grower__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactiveDate__c</fullName>
        <label>Inactive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Password__c</fullName>
        <description>Temporary holder of the password requested by the end user.  After the User record is created, the value of this field is cleared out</description>
        <label>Initial Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>IsMassLoaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMassLoaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobClassification__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ag Member</fullName>
                </value>
                <value>
                    <fullName>Broker - Foodservice</fullName>
                </value>
                <value>
                    <fullName>Broker - Retail</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Dairy Consultant</fullName>
                </value>
                <value>
                    <fullName>Dairy Member</fullName>
                </value>
                <value>
                    <fullName>Dairy Member Owner</fullName>
                </value>
                <value>
                    <fullName>Direct Ag Producer</fullName>
                </value>
                <value>
                    <fullName>Farmer</fullName>
                </value>
                <value>
                    <fullName>Member of a Member</fullName>
                </value>
                <value>
                    <fullName>Member Owner</fullName>
                </value>
                <value>
                    <fullName>Momentum Consultant</fullName>
                </value>
                <value>
                    <fullName>Nutritionist</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Retailer Management</fullName>
                </value>
                <value>
                    <fullName>Retailer Operations</fullName>
                </value>
                <value>
                    <fullName>Retailer Sales</fullName>
                </value>
                <value>
                    <fullName>RTech Partner</fullName>
                </value>
                <value>
                    <fullName>Warehousing Partner</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Access_Date__c</fullName>
        <description>Last Access Date</description>
        <label>Last Access Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <formula>Contact.Manager_Email__c</formula>
        <label>Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>Contact.Manager_Name__c</formula>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Phone__c</fullName>
        <formula>Contact.Manager_Phone__c</formula>
        <label>Manager Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <description>Registration Date</description>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registration_Info__c</fullName>
        <inlineHelpText>This is information kept for the user during registration.</inlineHelpText>
        <label>Registration Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                    <default>true</default>
                    <label>Started</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Needs Email Verification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Provisioned</fullName>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verify_Hash__c</fullName>
        <label>Verification Hash</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dairy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>purina__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purina</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>seed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WinField</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>EMSAdmins</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>EMS Admins</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMS_Community_Plus</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>EMS Internal Community Plus</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>EMS Support</value>
        </filters>
        <label>EMS Community Plus</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMS_Service_Accounts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Service Account</value>
        </filters>
        <label>EMS Service Accounts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>